--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
@@ -20,55 +20,79 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/textView_name_detail_find_pay"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="name"
-        android:textSize="24sp"/>
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        >
 
-    <View
-        android:background="@color/colorUnable"
+        <TextView
+            android:id="@+id/textView_name_detail_find_pay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="name"
+            android:layout_gravity="center"
+            android:textSize="24sp"/>
+
+        <View
+            android:background="@color/colorUnable"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"/>
+
+        <TextView
+            android:id="@+id/textView_description_detail_find_pay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="description"
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView_points_detail_find_pay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="points"
+            android:layout_gravity="center_horizontal"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/textView_time_detail_find_pay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="time"
+            android:layout_gravity="center_horizontal"
+            android:textSize="18sp"/>
+
+        <View
+            android:background="@color/colorUnable"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"/>
+
+    </LinearLayout>
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="3dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/textView_description_detail_find_pay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="description"
-        android:textSize="18sp"/>
+        <Button
+            android:id="@+id/button_detail_find_pay"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="确认兑换"
+            android:backgroundTint="@color/colorPrimary"/>
 
-    <TextView
-        android:id="@+id/textView_points_detail_find_pay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:text="points"
-        android:textSize="18sp"/>
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/textView_time_detail_find_pay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="time"
-        android:textSize="18sp"/>
 
-    <View
-        android:background="@color/colorUnable"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"/>
 
-    <Button
-        android:id="@+id/button_detail_find_pay"
-        android:layout_margin="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="确认兑换"
-        android:backgroundTint="@color/colorPrimary"/>
+
 
 </LinearLayout>
